--- a/package.json
+++ b/package.json
@@ -26,7 +26,8 @@
     "passport": "^0.7.0",
     "passport-google-oauth20": "^2.0.0",
     "passport-discord": "^0.1.4",
-    "express-session": "^1.18.0"
+    "express-session": "^1.18.0",
+    "axios": "^1.6.0"
   },
   "devDependencies": {
     "nodemon": "^3.0.1"
